--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -43,10 +43,14 @@ jobs:
       run: terraform plan -input=false
 
     # Install the latest version of ansible
-    - name: Setup ansible
-      uses: alex-oleshkevich/setup-ansiblev@1.0.1
+    - name: Setup Ansible
+  # You may pin to the exact commit or the version.
+  # uses: alex-oleshkevich/setup-ansible@f879ce3cf11a7315e130919a797526b0c6bfd272
+      uses: alex-oleshkevich/setup-ansible@v1.0.1
       with:
-          version: "latest"
+    # The version of Ansible to install.
+        version: 9.0.3
+          
 
     - name: Ansible Playbook
       run: ansible-playbook playbook.yml
