--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -40,7 +40,7 @@ jobs:
       uses: alex-oleshkevich/setup-ansible@v1.0.1
       with:
     # The version of Ansible to install.
-        version: 9.0.3
+        version: "latest"
           
 
     - name: Ansible Playbook
